--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
     "expo": "~51.0.36",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
@@ -19,7 +21,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-shadow-2": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
