--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-community/slider": "^4.5.4",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
